# deck-ai-assistant

./: .gitattributes  .gitignore  .stignore  README.md  README_VOICE.md  aiassistant_config.json  biome.json  decky.pyi  deploy.sh  main.py  package-lock.json  package.json  plugin.json  pnpm-lock.yaml  pyproject.toml  rollup.config.js  setup_speech.sh
.github/ISSUE_TEMPLATE/: bug_report_critical_001_api_key_logged.md  bug_report_critical_002_race_condition.md  bug_report_critical_003_injection.md
.github/workflows/: ci.yml
.stfolder/: syncthing-folder-0e3d1c.txt  syncthing-folder-5e654d.txt
backend/: Dockerfile  entrypoint.sh
py_modules/vosk/tqdm-4.67.1.dist-info/: RECORD
src/: index.tsx  types.d.ts
src/components/: AIAssistant.sync-conflict-20250805-141827-MMZTKAA.tsx  AIAssistant.tsx  SettingsPage.tsx
src/utils/: gameNameMap.ts
vosk/charset_normalizer-3.4.2.dist-info/: RECORD
vosk/srt-3.5.3.dist-info/: RECORD
vosk/vosk-0.3.45.dist-info/: RECORD
vosk/websockets-15.0.1.dist-info/: RECORD
